--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-  "port":6969,
-  "secret":"b0cbcef5a486d9636472ac27f8e11a9d"
+  "server":proxy.digitalresistance.dog,
+  "port":1023,
+  "secret":"954398a09cc4211330754974808a8215"
 }
